authorization and registration added, added working with DB (Sqlite) in server module